Fixed the light mode and dark mode for Project description

--- a/src/index.scss
+++ b/src/index.scss
@@ -31,10 +31,12 @@ p, a, h1, h2, h3, h4, h5, label, button {
   color: white; // Default text color for dark mode
   font-family: "Lato", sans-serif;
 }
+.project li {
+  color: white; // Default text color for dark mode
+  font-family: "Lato", sans-serif;
+} 
 
-li {
-  color: inherit; // Ensure list items inherit text color
-}
+
 
 .navigation-bar {
   justify-content: space-between;
